<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>elastic-memory</name>
    <modules>
        <module>hazelcast-ee-core</module>
        <module>hazelcast-ee-sessions</module>
    </modules>
    <groupId>com.hazelcast</groupId>
    <artifactId>elastic-memory</artifactId>
    <packaging>pom</packaging>
    <version>3.3-RC1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.6</jdk.version>
        <target.dir>target</target.dir>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <findbugs.maven.plugin.version>2.5.3</findbugs.maven.plugin.version>
        <checkstyle.maven.plugin.version>2.12</checkstyle.maven.plugin.version>
        <main.basedir>${project.basedir}</main.basedir>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
    </properties>

    <licenses>
        <license>
            <name>Commercial License</name>
            <url>http://www.hazelcast.com/licenses/LICENSE.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <organization>
        <name>Hazelcast, Inc.</name>
        <url>http://www.hazelcast.com/</url>
    </organization>


    <repositories>
       <repository>
           <id>snapshot-repository</id>
           <name>Maven2 Snapshot Repository</name>
           <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       </repository>
    </repositories>

    <build>
        <plugins>
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-scm-plugin</artifactId>-->
                <!--<version>1.9</version>-->
                <!--<configuration>-->
                    <!--<connectionType>connection</connectionType>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<artifactId>exec-maven-plugin</artifactId>-->
                <!--<groupId>org.codehaus.mojo</groupId>-->
                <!--<executions>-->
                    <!--<execution>&lt;!&ndash; Run our version calculation script &ndash;&gt;-->
                        <!--<id>Version Calculation</id>-->
                        <!--<phase>generate-sources</phase>-->
                        <!--<goals>-->
                            <!--<goal>exec</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<executable>updateVersion.sh ${project.version}</executable>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-release-plugin</artifactId>-->
                <!--<version>2.5</version>-->
                <!--<configuration>-->
                    <!--<tagNameFormat>v@{project.version}</tagNameFormat>-->
                    <!--<goals>resources:resources assembly:assembly deploy site-deploy</goals>-->
                    <!--<preparationGoals>clean verify org.codehaus.mojo:exec-maven-plugin:exec scm:checkin -Dmessage="updated non-pom versions to the release version"</preparationGoals>-->
                    <!--<completionGoals>clean verify org.codehaus.mojo:exec-maven-plugin:exec scm:checkin -Dmessage="updated non-pom versions to the next version"</completionGoals>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.plugin.version}</version>
                <configuration>
                    <finalName>hazelcast-${project.version}</finalName>
                    <descriptors>
                        <descriptor>./src/main/assembly/assembly-ee.xml</descriptor>
                    </descriptors>
                    <appendAssemblyId>true</appendAssemblyId>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <compress>true</compress>
                        <!-- Not needed for now -->
                        <!-- manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile -->
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>

                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=128M
                        -Dhazelcast.version.check.enabled=false
                        -Dhazelcast.mancenter.enabled=false
                        -Dhazelcast.elastic.memory.enabled=true
                        -Dhazelcast.elastic.memory.total.size=128m
                        -Dhazelcast.elastic.memory.chunk.size=1k
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>qa</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>${checkstyle.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>checkstyle</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <configLocation>${main.basedir}/checkstyle/checkstyle.xml</configLocation>
                            <suppressionsLocation>${main.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
                            <headerLocation>${main.basedir}/checkstyle/ClassHeader.txt</headerLocation>
                            <enableRSS>false</enableRSS>
                            <linkXRef>true</linkXRef>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>false</includeTestSourceDirectory>
                            <enableRulesSummary>true</enableRulesSummary>
                            <propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <version>${findbugs.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <failOnError>true</failOnError>
                            <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
        <profile>
            <id>test-coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <testFailureIgnore>true</testFailureIgnore>
                            <argLine>
                                -Xms128m -Xmx1G -XX:MaxPermSize=128M
                                -Dhazelcast.version.check.enabled=false
                                -Dhazelcast.mancenter.enabled=false
                                -Dhazelcast.logging.type=none
                                -Dhazelcast.test.use.network=false
                            </argLine>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

    <!--<scm>-->
        <!--<developerConnection>scm:git:git@github.com:hazelcast/elastic-memory.git</developerConnection>-->
    <!--</scm>-->
    <dependencies>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${version}</version>
            <scope>test</scope>
            <classifier>tests</classifier>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-client</artifactId>
            <version>${version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.12</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

    </dependencies>
</project>
